# standaloneQMLorCompositeComponent

./: CMakeLists.txt  Console_Component.qml  LayoutsTest.qml  MicroServer.qml  TCP_Component.qml  TEST.txt  file_opener.cpp  file_opener.h  main.cpp  main.qml  qml.qrc  tcp_client.cpp  tcp_client.h  tcp_server.cpp  tcp_server.h  tcp_session.cpp  tcp_session.h
